--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@ line-height: 1.4;
   border-radius: 10px;
 
 */
-.img src{
+img {
   border-radius: 10px;
 }
 .content-row {
@@ -109,7 +109,7 @@ footer {
 footer .footer-content { 
   margin: 0 auto; 
   /*======= create a width property. Set the value to 600px */
-  width: 600%;
+  width: 600px;
 }
 
 footer .footer-content h3 {
@@ -146,5 +146,6 @@ footer nav a:first-child {
 
 footer .footer-content .copyright {
   padding: 20px 0;
+  text-align: center;
    /*======= center the text here */
 }
